--- a/src/main/webapp/resources/css/chat.css
+++ b/src/main/webapp/resources/css/chat.css
@@ -264,3 +264,15 @@
   border-radius: 8px;
   margin-left: auto;
 }
+
+.delete-btn {
+  cursor: pointer;
+  width: 60px;
+  height: 30px;
+  border-radius: 2px;
+  box-shadow: rgb(0 0 0 / 10%) 0px 7px 15px -2px;
+  background-color: #ff8c8c;
+  border: 0;
+  border-radius: 8px;
+  margin-left: auto;
+}
