test: 이메일 전송 테스트

--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -127,3 +127,11 @@ table tr td:first-child {
 #passwordCheckMessage {
 	margin: 12px 0;
 }
+
+#mail_check_input_box_false{
+    background-color:#ebebe4;
+}
+ 
+#mail_check_input_box_true{
+    background-color:white;
+}
