--- a/src/main/webapp/resources/css/boarddetail.css
+++ b/src/main/webapp/resources/css/boarddetail.css
@@ -4,6 +4,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .profile-container {
@@ -93,7 +94,7 @@
     vertical-align: middle;
     border: solid;
     border-width: 0.5px;
-    width: 70px;
+    width: 100px;
     height: 30px;
     margin-bottom: 5px;
 }
@@ -203,4 +204,42 @@
 
 .child {
 	padding-left : 30px;
+}
+
+.info-container {
+	display: flex;
+	flex-direction: row;
+	margin-top: 15px;
+	margin-bottom:15px;
+}
+
+.info-sub-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 150px;
+	height: 100px;
+	border-right: solid;
+	border-right-color: #e2e2e2;
+	border-right-width: 0.01px;
+	margin-right:15px;
+}
+
+.blue {
+	color: #7979ff;
+}
+
+.banner-container {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 15px;
+}
+
+.banner-container button {
+	background-color: white;
+    border: solid;
+    height: 30px;
+    border-width:2px;
+    border-color: #0080c0;
+    color: #0080c0;
 }
