--- a/src/main/webapp/resources/css/dropdown.css
+++ b/src/main/webapp/resources/css/dropdown.css
@@ -45,6 +45,7 @@
   background-color: #fff;
   box-shadow: 0 1px 15px rgba(27, 31, 35, 0.15);
   transition: transform 200ms ease-in;
+  z-index: 1;
 }
 .dropdown-menu.active {
   display: block;
