--- a/src/main/webapp/resources/css/register.css
+++ b/src/main/webapp/resources/css/register.css
@@ -102,18 +102,22 @@ table tr td:first-child {
 	letter-spacing: -0.02em;
 }
 
-.register-form button {
+.register-form .check-btn {
 	width: 100%;
 	height: 40px;
 	border: none;
 	border-radius: 8px;
-	background-color: rgba(154, 226, 232, 1);
+	background-color: rgb(239, 239, 239);
 	font-size: 16px;
-	color: #ffffff;
+	color: #000;
 	letter-spacing: 0.1em;
 }
 
-.register-form button:last-child {
+.disabled{
+	background-color: rgb(239, 239, 239);
+}
+
+.register-form .submit-btn {
 	width: 40%;
 	height: 40px;
 	border: none;
