2차 합본 에러 수정

--- a/src/main/webapp/resources/css/findPassword.css
+++ b/src/main/webapp/resources/css/findPassword.css
@@ -1,8 +1,6 @@
 @charset "UTF-8";
 
-@import url("https://fonts.googleapis.com/css?family=Dax:400,900");
-
-.update {
+.withdraw {
    display: flex;
    flex-direction: column;
    margin: 60px auto 0 auto;
@@ -12,28 +10,29 @@
    border-radius: 12px;
 }
 
-.update h1 {
+.withdraw h1 {
    line-height: 30px;
    color: #292929;
    font-size: 22px;
    font-weight: bold;
 }
 
-.update .input {
+.withdraw .input {
    margin-top: 24px;
 }
 
-.update .input .label {
+.withdraw .input .label {
    flex: auto;
    line-height: 20px;
    color: #737373;
    font-size: 12px;
    font-weight: bold;
+   
    display: flex;
    justify-content: space-between;
 }
 
-.update .input .label p {
+.withdraw .input .label p {
    flex-shrink: 0;
    line-height: 20px;
    color: #a6a6a6;
@@ -41,7 +40,7 @@
    font-weight: normal;
 }
 
-.update .input .input-info {
+.withdraw .input input {
    display: block;
    box-sizing: border-box;
    margin-top: 4px;
@@ -62,37 +61,14 @@
    letter-spacing: -0.5px;
 }
 
-.update .input .radio {
-
-}
-
-#nickname {
-   width: 75%;
-}
-
-.inputs {
-   display: flex;
-   flex-direction: row;
-   justify-content: space-between;
-}
-
-.inputs button {
-   border-radius: 12px;
-   color: #fff;
-   font-size: 16px;
-   font-weight: normal;
-   background-color: rgba(154, 226, 232, 1);
-   width: 20%;
-}
-
-.update .rules p {
+.withdraw .rules p {
    margin-top: 24px;
    line-height: 18px;
    color: #737373;
    font-size: 12px;
 }
 
-.update input {
+.withdraw input {
    margin-top: 24px;
    border: 0;
    border-radius: 12px;
@@ -117,24 +93,9 @@ input[type=submit]:hover {
    opacity: 0.8;
 }
 
-.caution {
-   margin: 4px 0 0 8px;
-   line-height: 20px;
-   color: #c62917;
-   font-size: 12px;
-}
-
-.profile-img {
-   display: flex;
-   justify-content: center;
-   border-radius: 50%;
-}
-
-.profile-img img {
-   cursor: pointer;
-   width: 130px;
-   height: 130px;
-   border: 0.5px solid #ededed;
-   border-radius: 8px;
-   margin-bottom: 12px;
+.caution{
+    margin: 4px 0 0 8px;
+    line-height: 20px;
+    color: #c62917;
+    font-size: 12px;
 }
